# vm_middleware

./: .env.example  .gitignore  ARCHITECTURE.docx  ARCHITECTURE.md  IMPLEMENTATION_NOTES.md  Makefile  OVERVIEW.md  README.md  architecture_simple.docx  architecture_simple.md  architecture_simple.txt  docker-compose.yaml  pyproject.toml  tag_taxonomy.txt  user_stories.txt  ~$CHITECTURE.docx
config/: jira.yaml  maintenance.yaml  nvd.yaml  rollout.yaml  schedule.yaml  scoring.yaml  sla_policy.yaml  tenable.yaml
db/: alembic.ini
db/migrations/: env.py
scripts/: dump_export_sample.py  dump_export_tags_check.py  enrich_nvd.py  generate_report.py  maintenance.py  probe_advanced_assets.py  probe_advanced_text.py  probe_asset_id_path.py  probe_asset_id_thorough.py  probe_assets_path.py  probe_compare.py  probe_description_props.py  probe_doc_validated.py  probe_filter_shapes.py  probe_findings_simple_mode.py  probe_mode_values.py  probe_query_mode.py  probe_query_params.py  probe_remediation_fields.py  probe_simple_mode.py  probe_simple_text_search.py  run_local.py  test_tag_roundtrip.py  test_tenable.py  test_tenable_tags.py  test_tenable_tags2.py  test_tenable_tags3.py
src/: pipeline.py
src/common/: config.py  db.py  logging.py  models.py  tag_parser.py
src/ingestion/: enrichment.py  nvd_enrichment.py  tagged_assets.py  tenable_client.py  tenable_ingestion.py
src/maintenance/: __init__.py  retention.py
src/reconciliation/: reconciler.py
src/reporting/: csv_reports.py
src/scoring/: custom_model.py  engine.py  lumin_model.py  sla.py  (+1 more)
tests/: conftest.py
(+25 files in other folders)
